// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`typescript-raw css snapshot test - styled-function-local-interpolation 1`] = `
"import styled from 'astroturf';
const RED = 'red';
const A = styled.div \`
  color: red;
\`;
export const SomeComponent = styled(A) \`
  background: \${RED};
\`;
//# sourceMappingURL=styled-function-local-interpolation.js.map"
`;

exports[`typescript-raw css snapshot test - styled-function-remote-interpolation 1`] = `
"import styled from 'astroturf';
import { RED } from './utils/colors';
const A = styled.div \`
  color: red;
\`;
export const SomeComponent = styled(A) \`
  background: \${\\"red\\"};
\`;
//# sourceMappingURL=styled-function-remote-interpolation.js.map"
`;

exports[`typescript-raw css snapshot test - styled-remote-interpolation 1`] = `
"import styled from 'astroturf';
import { RED, GREEN } from './utils/colors';
export const SomeComponent = styled.div \`
  color: \${\\"red\\"};
  background: \${\\"green\\"};
\`;
//# sourceMappingURL=styled-remote-interpolation.js.map"
`;

exports[`typescript-raw css snapshot test - xcss 1`] = `
"import { xcss } from '../../../../xcss';
export const someClassName = (css \`
.someClassName {

  color: red;

}\`).someClassName;
//# sourceMappingURL=xcss.js.map"
`;

exports[`typescript-raw css snapshot test - xcss-local-interpolation 1`] = `
"import { xcss } from '../../../../xcss';
const RED = 'red';
export const someClassName = (css \`
.someClassName {

  color: \${RED};

}
\`).someClassName;
//# sourceMappingURL=xcss-local-interpolation.js.map"
`;

exports[`typescript-raw css snapshot test - xcss-property-assignment 1`] = `
"import { xcss } from '../../../../xcss';
export const classes = {
    someClassName: (function () {
        var p_someClassName = css \`
.someClassName {

    color: red;
  
}\`;
        return p_someClassName.someClassName;
    })(),
};
//# sourceMappingURL=xcss-property-assignment.js.map"
`;

exports[`typescript-raw css snapshot test - xcss-property-assignment-local-interpolation 1`] = `
"import { xcss } from '../../../../xcss';
const RED = 'red';
export const classes = {
    someClassName: (function () {
        var p_someClassName = css \`
.someClassName {

    color: \${RED};
  
}
\`;
        return p_someClassName.someClassName;
    })(),
};
//# sourceMappingURL=xcss-property-assignment-local-interpolation.js.map"
`;

exports[`typescript-raw css snapshot test - xcss-property-assignment-remote-interpolation 1`] = `
"import { RED, GREEN } from './utils/colors';
import { xcss } from '../../../../xcss';
export const classes = {
    someClassName: (function () {
        var p_someClassName = css \`
.someClassName {

    color: \${\\"red\\"};
    background: \${\\"green\\"};
  
}
\`;
        return p_someClassName.someClassName;
    })(),
};
//# sourceMappingURL=xcss-property-assignment-remote-interpolation.js.map"
`;

exports[`typescript-raw css snapshot test - xcss-remote-interpolation 1`] = `
"import { RED, GREEN } from './utils/colors';
import { xcss } from '../../../../xcss';
export const someClassName = (css \`
.someClassName {

  color: \${\\"red\\"};
  background: \${\\"green\\"};

}
\`).someClassName;
//# sourceMappingURL=xcss-remote-interpolation.js.map"
`;
